webapp: topic selection form

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -6,6 +6,32 @@
 </head>
 <body class="lift:content_id=main">
 <div id="main" class="lift:surround?with=default;at=content">
+    <lift:Select form="POST">
+        <h1>Случайные тесты</h1>
+        <table>
+            <tr>
+                <td>Количество вариантов:</td>
+                <td id="variantCount">xxx</td>
+            </tr>
+            <tr>
+                <td>
+                    <table>
+                        <tr>
+                            <td><b>Тема</b></td>
+                            <td><b>Количество<br/> вопросов</b></td>
+                        </tr>
+                        <tr id="topics">
+                            <td id="title">xxx</td>
+                            <td id="count">xxx</td>
+                        </tr>
+                    </table>
+                </td>
+            </tr>
+            <tr>
+                <td colspan="2" id="submit">xxx</td>
+            </tr>
+        </table>
+    </lift:Select>
 </div>
 </body>
 </html>
