--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -6,32 +6,35 @@
 </head>
 <body class="lift:content_id=main">
 <div id="main" class="lift:surround?with=default;at=content">
-    <form class="lift:Select" method="post">
-        <h1>Случайные тесты</h1>
-        <table>
-            <tr>
-                <td>Количество вариантов:</td>
-                <td id="variantCount">xxx</td>
-            </tr>
-            <tr>
-                <td>
-                    <table>
-                        <tr>
-                            <td><b>Тема</b></td>
-                            <td><b>Количество<br/> вопросов</b></td>
-                        </tr>
-                        <tr id="topics">
-                            <td id="title">xxx</td>
-                            <td id="count">xxx</td>
-                        </tr>
-                    </table>
-                </td>
-            </tr>
-            <tr>
-                <td colspan="2"><input type="submit" value="Получить тест"/></td>
-            </tr>
-        </table>
-    </form>
+    <div class="lift:Select">
+        <form class="lift:form.ajax" method="post">
+            <h1>Случайные тесты</h1>
+            <table>
+                <tr>
+                    <td>Количество вариантов:</td>
+                    <td id="variantCount">vvv</td>
+                </tr>
+                <tr>
+                    <td>
+                        <table>
+                            <tr>
+                                <td><b>Тема</b></td>
+                                <td><b>Количество<br/> вопросов</b></td>
+                            </tr>
+                            <tr id="topics">
+                                <td id="title">ttt</td>
+                                <td id="count">ccc</td>
+                            </tr>
+                        </table>
+                    </td>
+                </tr>
+                <tr>
+                    <td id="submit" colspan="2">sss</td>
+                </tr>
+            </table>
+        </form>
+        <div id="quiz">qqq</div>
+    </div>
 </div>
 </body>
 </html>
