webapp: progress animation

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -34,6 +34,9 @@
             </table>
         </form>
         <hr/>
+        <div style="display:none" id="in-progress">
+            <img src="/images/in-progress.gif" width="16" height="16"/>
+        </div>
         <div id="quiz">qqq</div>
     </div>
 </div>
