webapp: show topic descriptions

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -22,7 +22,10 @@
                                 <td><b>Количество<br/> вопросов</b></td>
                             </tr>
                             <tr id="topics">
-                                <td id="title">ttt</td>
+                                <td>
+                                    <span id="title">ttt</span><br/>
+                                    <small><span id="description">ddd</span></small>
+                                </td>
                                 <td id="count">ccc</td>
                             </tr>
                         </table>
