webapp: answers after each task

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -32,6 +32,10 @@
                     </td>
                 </tr>
                 <tr>
+                    <td>Ответы:</td>
+                    <td id="answersType">aaa</td>
+                </tr>
+                <tr>
                     <td id="submit" colspan="2">sss</td>
                 </tr>
             </table>
