--- a/src/main/webapp/templates-hidden/quiz.html
+++ b/src/main/webapp/templates-hidden/quiz.html
@@ -8,7 +8,12 @@
 
     <div id="task">
         Задание <span id="taskNumber">ttt</span>.
-        <pre id="code">ccc</pre>
+        <div style="padding-left:1em">
+            <pre id="code">ccc</pre>
+            <div id="maybeAnswer">
+                <small>Ответ: <tt id="answer">aaa</tt></small>
+            </div>
+        </div>
     </div>
 
     <hr/>
