--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -44,7 +44,7 @@
         <div style="display:none" id="in-progress">
             <img src="/images/in-progress.gif" width="16" height="16"/>
         </div>
-        <div id="quiz">qqq</div>
+        <div id="maybeTasks">ttt</div>
     </div>
 </div>
 </body>
