--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -19,7 +19,7 @@
                         <table>
                             <tr>
                                 <td><b>Тема</b></td>
-                                <td><b>Количество<br/> вопросов</b></td>
+                                <td><b>Количество<br/> заданий</b></td>
                             </tr>
                             <tr id="topics">
                                 <td>
