--- a/src/main/webapp/templates-hidden/tasks.html
+++ b/src/main/webapp/templates-hidden/tasks.html
@@ -4,17 +4,17 @@
 </head>
 <body class="lift:content_id=tasks">
 <div id="tasks">
-    <h2>Задания</h2>
+    <h2><span class="lift:Loc.tasks">Tasks</span></h2>
     <hr/>
     <div id="variant">
-        <b>Вариант <span id="variantNumber">vvv</span>.</b>
+        <b><span class="lift:Loc.variant">Variant</span> <span id="variantNumber">vvv</span>.</b>
 
         <div id="task">
-            Задание <span id="taskNumber">ttt</span>.
+            <span class="lift:Loc.task">Task</span> <span id="taskNumber">ttt</span>.
             <div style="padding-left:1em">
                 <pre id="code">ccc</pre>
                 <div id="maybeAnswer">
-                    <small>Ответ: <tt id="answer">aaa</tt></small>
+                    <small><span class="lift:Loc.answer">Answer</span>: <tt id="answer">aaa</tt></small>
                 </div>
             </div>
         </div>
