--- a/src/main/webapp/templates-hidden/answers.html
+++ b/src/main/webapp/templates-hidden/answers.html
@@ -4,13 +4,13 @@
 </head>
 <body class="lift:content_id=tasks">
 <div id="tasks">
-    <h2>Ответы</h2>
+    <h2><span class="lift:Loc.answers">answers</span></h2>
     <hr/>
     <div id="variant">
-        <b>Вариант <span id="variantNumber">vvv</span>.</b>
+        <b><span class="lift:Loc.variant">variant</span> <span id="variantNumber">variantNumber</span>.</b>
 
         <div id="task">
-            Задание <span id="taskNumber">ttt</span>. <tt id="answer">aaa</tt>
+            <span class="lift:Loc.task">task</span> <span id="taskNumber">taskNumber</span>. <tt id="answer">answer</tt>
         </div>
 
         <hr/>
