added project site url

--- a/src/main/webapp/templates-hidden/_resources.html
+++ b/src/main/webapp/templates-hidden/_resources.html
@@ -2,6 +2,9 @@
     <res name="cTests" lang="en">C tests</res>
     <res name="cTests" lang="ru">Тесты по Си</res>
 
+    <res name="projectSite" lang="en">Project site</res>
+    <res name="projectSite" lang="ru">Сайт проекта</res>
+
     <res name="randomTests" lang="en">Random tests</res>
     <res name="randomTests" lang="ru">Случайные тесты</res>
 
