--- a/src/main/webapp/templates-hidden/default.html
+++ b/src/main/webapp/templates-hidden/default.html
@@ -7,5 +7,6 @@
 </head>
 <body>
 <lift:bind name="content"/>
+<center><a href="http://github.com/mephi42/c-quiz" class="lift:Loc.i">projectSite</a></center>
 </body>
 </html>
